--- a/client/src/components/projects/Projects.css
+++ b/client/src/components/projects/Projects.css
@@ -218,7 +218,7 @@
   border-radius: 15px;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.08);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  position: relative;
+  /* position: relative; */
 }
 
 .projects-list {
@@ -424,7 +424,6 @@
   font-size: 1rem;
   font-weight: 500;
   margin-top: 30px;
-  opacity: 0.8;
 }
 
 .menu-bar-icon {
