--- a/client/src/components/tasks/Tasks.css
+++ b/client/src/components/tasks/Tasks.css
@@ -31,7 +31,7 @@
 }
 
 .project-title {
-  font-size: 20px;
+  font-size: 28px;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -62,6 +62,7 @@
   background-color: #daf1e0;
   height: 100%;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .column-menu-dots {
@@ -112,6 +113,8 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  overflow-y: auto;
+  max-height: 450px;
 }
 
 .task-card {
@@ -120,6 +123,10 @@
   border-radius: 6px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
+  margin-top: 5px;
+  height: 80px;
+  align-items: center;
+  width: 280px;
 }
 
 .task-card:hover {
