--- a/client/src/components/topbar/Topbar.css
+++ b/client/src/components/topbar/Topbar.css
@@ -33,11 +33,13 @@
 .right-icons {
     display: flex;
     align-items: center;
+    padding: 5px;
+    margin-left: 10px;
 }
 
 .add-board-btn {
     padding: 8px 16px;
-    margin-right: 20px;
+    margin-right: 15px;
     background-color: #3b82f6;
     color: #fff;
     border: none;
@@ -54,6 +56,7 @@
 .icon {
     font-size: 24px;
     margin-left: 15px;
+    margin-right: 15px;
     cursor: pointer;
 }
 
