--- a/client/src/components/projects/Projects.css
+++ b/client/src/components/projects/Projects.css
@@ -146,7 +146,7 @@
     align-items: center;
 }
 
-.project-details div>strong {
+.project-details div > strong {
     margin-right: 5px;
 }
 
@@ -498,4 +498,8 @@ h2 {
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
+}
+
+.user-icon-circle:hover {
+    transform: scale(1.05);
 }
